* Added:   - `ACEPreferredOptionName'   - `IsKnownACEOption'   - `IsACEParameterOption'   - `IsACEStrategyOption' * Included in the intro. of Chapter 4 some discussion of how one   can use the GAP Help System to find out about options. * Modifications/fixes to:   - `ACEParameters' (needed to cope with no Group Generators)   - `ACEGroupGenerators' (needed to cope with no Group Generators)   - `ACEWrite' (now returns a status `true' = success or `fail') * Added:   - `IsACEProcessAlive'   - `ACEResurrectProcess'   ... and included a discussion of how to interrupt an interactive   ACE process and recover from it.

--- a/doc/interact.tex
+++ b/doc/interact.tex
@@ -119,8 +119,6 @@ possible to have more than one interactive process  running  at  once.
 The integer returned may be used to index which of these processes  an
 interactive {\ACE} interface function should be applied to.
 
-Each of
-
 \>ACEQuit( <i> ) F
 \>ACEQuit() F
 
@@ -167,7 +165,14 @@ write <string> to the <i>th or  default  interactive  {\ACE}  process;
 <string> must be in exactly the form the  {\ACE}  standalone  expects.
 The command is  echoed  via  `Info'  at  `InfoACE'  level  4  (with  a
 \lq{}`ToACE> '' prompt); i.e.~do `SetInfoACELevel(4);' to see what  is
-transmitted to the {\ACE} binary.
+transmitted  to  the  {\ACE}  binary.  `ACEWrite'  returns  `true'  if
+successful in writing to the stream of the interactive {\ACE} process,
+and `fail' otherwise.
+
+*Note:*
+If `ACEWrite' returns `fail' (which means that the {\ACE} process  has
+died), you may like to try resurrecting the interactive {\ACE} process
+via `ACEResurrectProcess' (see~"ACEResurrectProcess").
 
 \>ACERead( <i> ) F
 \>ACERead() F
@@ -221,7 +226,8 @@ wait indefinitely.
 \enditems
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\Section{Some Interactive ACE Process Utilities}
+\Section{Interactive ACE Process Utility Functions and Interruption of
+an Interactive ACE Process}
 
 \beginitems
 
@@ -238,6 +244,84 @@ interactive process or returns `fail' and emits a warning  message  to
 
 returns the list of integer indices of all active  interactive  {\ACE}
 processes.
+
+\index{interruption of an interactive ACE process} If  the  user  does
+not yet have a `gap>' prompt then usually {\ACE} is still  away  doing
+something and an {\ACE} interface function  is  still  waiting  for  a
+reply from {\ACE}. Typing a `Ctrl-C' (i.e. holding down the `Ctrl' key
+and typing  `c')  will  stop  the  waiting  and  send  {\GAP}  into  a
+`break'-loop{\undoquotes \atindex {break-loop} {@`break'-loop}},  from
+which one has no option but to `quit;'.  Typing  `Ctrl-C'  in  such  a
+circumstance will usually cause the  stream  of  the  the  interactive
+{\ACE} process to die; to check this  we  provide  `IsACEProcessAlive'
+(see~"IsACEProcessAlive"). If the  stream  of  an  interactive  {\ACE}
+process, indexed by <i>, say, has died, it may still  be  possible  to
+recover enough of the state before the death of the  stream  from  the
+information stored in the `ACEData.io[<i>]' record  (see  Section~"The
+ACEData   Record").   For   such   a   purpose,   we   have   provided
+`ACEResurrectProcess' (see~"ACEResurrectProcess").
+
+\>IsACEProcessAlive( <i> ) F
+\>IsACEProcessAlive() F
+
+return `true' if the stream of  the  <i>th  (or  default)  interactive
+{\ACE} process started by  `ACEStart'  is  alive  (i.e.~can  still  be
+written to), or `false', otherwise.
+
+\>ACEResurrectProcess( <i> [: options] ) F
+\>ACEResurrectProcess( [: options] ) F
+
+re-generate the stream of the <i>th (or  default)  interactive  {\ACE}
+process, started by `ACEStart' (see~"ACEStart"), and tries to  recover
+as much as possible of the previous state from  saved  values  of  the
+process's arguments and parameter options. The possible <options> here
+are `use' and `useboth' which are described in detail below.
+
+The arguments of the <i>th interactive {\ACE} process  are  stored  in
+`ACEData.io[<i>].args', a  record  with  fields  `fgens',  `rels'  and
+`sgens', which are the {\GAP} group generators, relators and  subgroup
+generators, respectively (see Section~"The  ACEData  Record").  Option
+information is saved in `ACEData.io[<i>].options' when a user uses  an
+interactive  {\ACE}  interface   function   with   options   or   uses
+`SetACEOptions' (see~"SetACEOptions"). Option information is saved  in
+`ACEData.io[<i>].parameters' if `ACEParameters'  (see~"ACEParameters")
+is used to extract from  {\ACE}  the  current  values  of  the  {\ACE}
+parameter options (this is generally less reliable unless one  of  the
+{\ACE} modes (see Section~"General and  Experimentation  ACE  Modes"),
+has been run previously).
+
+By   default,   `ACEResurrectProcess'   recovers   parameter    option
+information from `ACEData.io[<i>].options' if it  is  bound,  or  from
+`ACEData.io[<i>].parameters'   if    is    bound,    otherwise.    The
+`ACEData.io[<i>].options'  record,  however,  is  first  filtered  for
+parameter and strategy options (see Sections~"ACE  Parameter  Options"
+and~"The ACEStrategyOptions list"). To alter this behaviour, the  user
+is provided two options:
+
+\beginitems
+
+\quad`use := <useList>'& <useList>  may   contain   one  or  both   of
+`"options"'  and  `"parameters"'.  By  default,  `use  =   ["options",
+"parameters"]'.
+
+\quad`useboth' & (A boolean option). By default, `useboth = false'.
+
+\enditems
+
+If `useboth = true', `SetACEOptions' (see~"SetACEOptions") is  applied
+to   the    <i>-th    interactive    {\ACE}    process    with    each
+`ACEData.io[<i>].(<field>)'   for   each   <field>   (`"options"'   or
+`"parameters"') that is bound and in <useList>, in the  order  implied
+by <useList>. If `useboth = false', `SetACEOptions'  is  applied  with
+`ACEData.io[<i>].(<field>)' for only the first <field> that  is  bound
+in <useList>.
+
+*Notes:*
+Do not use general {\ACE}  options  with  `ACEResurrectProcess';  they
+will  only   be   superseded   by   those   options   recovered   from
+`ACEData.io[<i>].options'     and/or     `ACEData.io[<i>].parameters'.
+Instead, call `SetACEOptions' first (despite a warning that the stream
+is dead, the `ACEData.io[<i>].options' will be updated).
 
 \enditems
 
@@ -600,18 +684,18 @@ Since a user will sometimes have options  in  the  form  of  a  record
 alternative to the behind-the-colon syntax for the passing of  options
 via `SetACEOptions':
 
-\>SetACEOptions( <i>, <optionsRec>] ) F
-\>SetACEOptions( <optionsRec>] ) F
+\>SetACEOptions( <i>, <optionsRec> ) F
+\>SetACEOptions( <optionsRec> ) F
 
 In this form, the record <optionsRec> is used to  update  the  current
 options of the <i>th (or default) process started by `ACEStart'.  Note
 that since <optionsRec> is a record each field must have  an  assigned
 value; in particular, no-value {\ACE} options should be  assigned  the
 value `true' (see Section~"Interpretation  of  ACE  Options").  Please
-don't mix this form of `SetACEOptions' with the previous form; i.e.~do
-*not* pass both a record argument and options, since this will lead to
-options appearing in the wrong order; if you want to do this, make two
-separate calls to `SetACEOptions', e.g.
+don't mix these two forms of `SetACEOptions'  with  the  previous  two
+forms; i.e.~do *not* pass both a record argument  and  options,  since
+this will lead to options appearing in the wrong order; if you want to
+do this, make two separate calls to `SetACEOptions', e.g.
 
 \beginexample
 gap> SetACEOptions( rec(echo := 2) );
