--- a/doc/examples.tex
+++ b/doc/examples.tex
@@ -68,24 +68,24 @@ gap> G := PerfectGroup(IsPermGroup, 16*60, 1   # Arguments ... as per usual
 #I  CO: a=16 r=17 h=1 n=17; c=+0.00
 \endexample
 \beginexample
-#I   coset |      b      B      a      s      t      u      v
+#I   coset ||      b      B      a      s      t      u      v
 #I  -------+-------------------------------------------------
-#I       1 |      1      1      1      2      3      4      5
-#I       2 |     11     14      4      1      6      8      9
-#I       3 |     13     15      5      6      1     10     11
-#I       4 |      7      5      2      8     10      1      7
-#I       5 |      4      7      3      9     11      7      1
-#I       6 |      8     10      7      3      2     12     14
-#I       7 |      5      4      6     15     16      5      4
-#I       8 |     10      6      8      4     12      2     15
-#I       9 |     16     12     10      5     14     15      2
-#I      10 |      6      8      9     12      4      3     16
-#I      11 |     14      2     11     14      5     16      3
-#I      12 |      9     16     15     10      8      6     13
-#I      13 |     15      3     13     16     15     14     12
-#I      14 |      2     11     16     11      9     13      6
-#I      15 |      3     13     12      7     13      9      8
-#I      16 |     12      9     14     13      7     11     10
+#I       1 ||      1      1      1      2      3      4      5
+#I       2 ||     11     14      4      1      6      8      9
+#I       3 ||     13     15      5      6      1     10     11
+#I       4 ||      7      5      2      8     10      1      7
+#I       5 ||      4      7      3      9     11      7      1
+#I       6 ||      8     10      7      3      2     12     14
+#I       7 ||      5      4      6     15     16      5      4
+#I       8 ||     10      6      8      4     12      2     15
+#I       9 ||     16     12     10      5     14     15      2
+#I      10 ||      6      8      9     12      4      3     16
+#I      11 ||     14      2     11     14      5     16      3
+#I      12 ||      9     16     15     10      8      6     13
+#I      13 ||     15      3     13     16     15     14     12
+#I      14 ||      2     11     16     11      9     13      6
+#I      15 ||      3     13     12      7     13      9      8
+#I      16 ||     12      9     14     13      7     11     10
 A5 2^4
 gap> GeneratorsOfGroup(G); # Just to show we indeed have a perm'n rep'n
 [ ( 2, 4)( 3, 5)( 7,12)( 9,11)(13,14)(15,16), 
@@ -142,19 +142,19 @@ gap> table := ACECosetTableFromGensAndRels(
 #I  CO: a=428 r=192 h=243 n=429; l=15 c=+0.00; m=473 t=800
 #I  INDEX = 480 (a=480 r=210 h=484 n=484; l=18 c=0.08; m=480 t=855)
 #I  CO: a=480 r=210 h=481 n=481; c=+0.00
-#I   coset |      a      A      b      B      s      t      u      v      d
+#I   coset ||      a      A      b      B      s      t      u      v      d
 #I  -------+---------------------------------------------------------------
-#I       1 |      1      1      7      6      2      3      4      5      1
-#I       2 |      4      4     22     36      1      8     10     11      2
-#I       3 |      5      5     30     23      8      1     12     13      3
-#I       4 |      2      2     17     14     10     12      1      9      4
-#I       5 |      3      3     15     19     11     13      9      1      5
+#I       1 ||      1      1      7      6      2      3      4      5      1
+#I       2 ||      4      4     22     36      1      8     10     11      2
+#I       3 ||      5      5     30     23      8      1     12     13      3
+#I       4 ||      2      2     17     14     10     12      1      9      4
+#I       5 ||      3      3     15     19     11     13      9      1      5
 ... 470 lines omitted here ...
-#I     476 |    469    469    407    406    478    472    466    480    476
-#I     477 |    477    477    314    313    474    471    467    468    477
-#I     478 |    473    473    380    379    476    467    471    470    478
-#I     479 |    479    479    384    383    475    468    470    471    479
-#I     480 |    480    480    421    420    470    469    475    476    480
+#I     476 ||    469    469    407    406    478    472    466    480    476
+#I     477 ||    477    477    314    313    474    471    467    468    477
+#I     478 ||    473    473    380    379    476    467    471    470    478
+#I     479 ||    479    479    384    383    475    468    470    471    479
+#I     480 ||    480    480    421    420    470    469    475    476    480
 [ [ 1, 7, 5, 6, 3, 4, 2, 27, 25, 26, 23, 24, 39, 21, 15, 18, 46, 16, 19, 51, 
       14, 52, 11, 12, 9, 10, 8, 68, 69, 66, 67, 75, 64, 59, 62, 77, 60, 79, 
 ... 30 lines omitted here ...
@@ -217,20 +217,20 @@ gap> # Similarly, we can use ACECosetTable() (which returns the
 gap> # `standardized' coset table) with or without an argument:  
 gap> ACECosetTable(); # Interactive version of ACECosetTableFromGensAndRels()
 #I  CO: a=12 r=13 h=1 n=13; c=+0.00
-#I   coset |      b      B      a
+#I   coset ||      b      B      a
 #I  -------+---------------------
-#I       1 |      3      2      2
-#I       2 |      1      3      1
-#I       3 |      2      1      4
-#I       4 |      8      5      3
-#I       5 |      4      8      6
-#I       6 |      9      7      5
-#I       7 |      6      9      8
-#I       8 |      5      4      7
-#I       9 |      7      6     10
-#I      10 |     12     11      9
-#I      11 |     10     12     12
-#I      12 |     11     10     11
+#I       1 ||      3      2      2
+#I       2 ||      1      3      1
+#I       3 ||      2      1      4
+#I       4 ||      8      5      3
+#I       5 ||      4      8      6
+#I       6 ||      9      7      5
+#I       7 ||      6      9      8
+#I       8 ||      5      4      7
+#I       9 ||      7      6     10
+#I      10 ||     12     11      9
+#I      11 ||     10     12     12
+#I      12 ||     11     10     11
 [ [ 2, 1, 4, 3, 6, 5, 8, 7, 10, 9, 12, 11 ], 
   [ 2, 1, 4, 3, 6, 5, 8, 7, 10, 9, 12, 11 ], 
   [ 3, 1, 2, 5, 7, 8, 4, 9, 6, 11, 12, 10 ], 
