--- a/doc/basics.tex
+++ b/doc/basics.tex
@@ -324,6 +324,110 @@ either        explicitly        via         `ACEAddSubgroupGenerators'
 by  deleting  subgroup  generators  via  `ACEDeleteSubgroupGenerators'
 (see~"ACEDeleteSubgroupGenerators").
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\Section{Coset Table Standardisation Schemes}
+
+The standardisation scheme for coset tables that is the  default  used
+in  {\GAP},  numbers  cosets   according   to   coset   representative
+word-length in the group generators and lexical  ordering  imposed  by
+the user-supplied  ordering  of  the  group  generators.  This  scheme
+ensures that as one scans  the  columns  corresponding  to  the  group
+generators (in user-supplied order) row by  row,  one  encounters  new
+coset numbers in numeric order. As an example, consider the (infinite)
+group with presentation $\langle x,  y,  a,  b  \mid  x^2,  y^3,  a^4,
+b^2\rangle$. According to {\GAP}'s standardisation  scheme  the  coset
+table  corresponding  to  this  presentation  (omitting  the   columns
+corresponding to  inverse  generators,  which  play  no  part  in  the
+numbering scheme) would begin as follows:
+
+\begintt
+ coset no. ||      x      y      a      b    rep've
+-----------+--------------------------------------
+         1 ||      2      3      4      5
+         2 ||      1      6      7      8    x
+         3 ||      9     10     11     12    y
+         4 ||     13     14     15     16    a
+         5 ||     17     18     19      1    b
+         6 ||     20     21     22     23    xy
+         7 ||     24     25      2     26    xa
+         8 ||     27     28     29      2    xb
+         9 ||      3     30     31     32    yx
+        10 ||     33      1     34     35    yy
+        11 ||     36     37     38     39    ya
+        12 ||     40     41     42      3    yb
+        13 ||      4     43     44     45    ax
+        14 ||     46     47     48     49    ay
+        15 ||     50     51     52     53    aa
+        16 ||     54     55     56      4    ab
+        17 ||      5     57     58     59    bx
+        18 ||     60     61     62     63    by
+        19 ||     64     65     66     67    ba
+        20 ||      6     68     69     70    xyx
+        21 ||     71      2     72     73    xyy
+\endtt
+
+Observe that the representatives are ordered according to  length  and
+then the lexical ordering implied by defining $x\<y\<a\<b$ (with  some
+words omitted due to their equivalence to words that precede  them  in
+the ordering). Also observe that as one scans the body  of  the  table
+row by row from left to right new  coset  numbers  appear  in  numeric
+order without gaps (2, 3, 4, 5, then 1 which we have already seen,  6,
+7, etc.).
+
+A standardisation scheme that is often more convenient  than  {\GAP}'s
+default    scheme    is    the     `lenlex'{\undoquotes\atindex{lenlex
+standardisation scheme} {@`lenlex'  standardisation  scheme}}  scheme,
+which is the  one  used  within  {\ACE}.  (With  the  `lenlex'  option
+(see~"option lenlex"), the coset table output  by  `ACECosetTable'  or
+`ACECosetTableFromGensAndRels'  is  standardised  according   to   the
+`lenlex' scheme.) The `lenlex' scheme  is  very  similar  to  {\GAP}'s
+default scheme except inverse generators are  included,  each  inverse
+generator included immediately are  each  generator  in  the  alphabet
+ordering that defines the `lexical' order. By doing this and including
+the  columns  for  the  inverse  generators  immediately   after   the
+corresponding generators, in  the  coset  table,  one  finds  for  the
+`lenlex' scheme that again when one scans the body of  the  table  new
+coset  numbers  appear  in  numeric  order.  Let  us  take  the   same
+presentation as before for an example. Then the first 21 lines of  its
+coset  table  using  the  `lenlex'  scheme  for  coset  numbering  and
+including columns for the inverse generators is as follows:
+
+\begintt
+ coset no. ||      x      X      y      Y      a      A      b      B   rep've
+-----------+------------------------------------------------------------------
+         1 ||      2      2      3      4      5      6      7      7
+         2 ||      1      1      8      9     10     11     12     12    x
+         3 ||     13     13      4      1     14     15     16     16    y
+         4 ||     17     17      1      3     18     19     20     20    Y
+         5 ||     21     21     22     23     24      1     25     25    a
+         6 ||     26     26     27     28      1     24     29     29    A
+         7 ||     30     30     31     32     33     34      1      1    b
+         8 ||     35     35      9      2     36     37     38     38    xy
+         9 ||     39     39      2      8     40     41     42     42    xY
+        10 ||     43     43     44     45     46      2     47     47    xa
+        11 ||     48     48     49     50      2     46     51     51    xA
+        12 ||     52     52     53     54     55     56      2      2    xb
+        13 ||      3      3     57     58     59     60     61     61    yx
+        14 ||     62     62     63     64     65      3     66     66    ya
+        15 ||     67     67     68     69      3     65     70     70    yA
+        16 ||     71     71     72     73     74     75      3      3    yb
+        17 ||      4      4     76     77     78     79     80     80    Yx
+        18 ||     81     81     82     83     84      4     85     85    Ya
+        19 ||     86     86     87     88      4     84     89     89    YA
+        20 ||     90     90     91     92     93     94      4      4    Yb
+        21 ||      5      5     95     96     97     98     99     99    ax
+\endtt
+
+In  the  table  each  inverse  generator   is   represented   by   the
+corresponding uppercase letter ($X$  represents  the  inverse  of  $x$
+etc.), and the lexical ordering of the representatives is that implied
+by defining $x\<X\<y\<Y\<a\<A\<b\<B$. As before, observe that  as  one
+scans the body of the table row by row from left to  right  new  coset
+numbers are encountered in numeric  order  without  gaps  (2,  then  2
+again, 3, 4, 5, 6, 7, then 7 again, etc.); but this time,  it  is  the
+inclusion of the columns that correspond  to  the  inverse  generators
+that makes it work.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
 %E
